# 1CQualification

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
docs/: a00002_source.html  a00004.dot  a00005.html  a00008_source.html  a00011_source.html  a00012.dot  a00014.html  a00014_source.html  a00017.html  a00019.dot  a00020.html  a00020_source.html  a00021.dot  a00022.dot  a00023.html  a00024.dot  a00025.dot  a00026_source.html  a00030.dot  a00031.dot  a00032.html  a00033.dot  a00034.dot  a00035.html  a00035_source.html  a00038.html  a00041.html  a00044_source.html  a00046.dot  a00047.html  a00048.html  a00049.dot  a00052.html  a00053.html  a00053_a21f7a08caacc41cc3475f4bc7f9a1a67_icgraph.dot  a00053_a3ffde9e4565bba175bd56c06c0f99162_icgraph.dot  a00053_a6b58e451713ebbf12866c1cd8e0a66ab_icgraph.dot  a00055_a2e205dc91741b7dde43b825da60c9f4c_cgraph.dot  a00055_a2e205dc91741b7dde43b825da60c9f4c_icgraph.dot  a00055_a56fb16f3a09e011db85757491c52691e_cgraph.dot  (+179 more)
docs/html/: a00002.html  a00003.dot  a00005_source.html  a00006.dot  a00007.dot  a00008.html  a00009.dot  a00011.html  a00015.dot  (+213 more)
src/: CMakeLists.txt
src/core/: StringMatcher.cpp  StringMatcher.h
src/core/algo/: GeneralSearcher.cpp  GeneralSearcher.h  LargeMatcher.cpp  LargeMatcher.h  SingleSearcher.cpp  SingleSearcher.h  SmallSearcher.cpp  SmallSearcher.h
src/core/details/: KMP.cpp  KMP.h  Ukkonen.cpp  Ukkonen.h
src/core/utils/: cxxopts.hpp
src/interfaces/: MatcherInterface.h
tests/: CMakeLists.txt  largeSearcherTests.cpp  multiSearcherTests.cpp  singleSearcher.cpp  smallSearcherTests.cpp
(+408 files in other folders)
